Fixed overflow-x

--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -41,8 +41,6 @@ img {
 #wrapper {
     width: 100%;
     height: 100%;
-    width: 100vw;
-    height: 100vh;
 }
 header {
     background-color: $black;
